After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737473 - Trash backend doesn't ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT
Trash backend doesn't ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: trash backend
1.22.x
Other Linux
: Normal minor
: ---
Assigned To: Allison Karlitskaya (desrt)
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2014-09-27 11:08 UTC by Ross Lagerwall
Modified: 2014-10-01 06:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
trash: Ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT (1.05 KB, patch)
2014-09-27 11:10 UTC, Ross Lagerwall
committed Details | Review

Description Ross Lagerwall 2014-09-27 11:08:16 UTC
The trash backend doesn't ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT which generates a spurious warning like:
** (process:3547): WARNING **: *** Unsupported operation detected on trash directory

** (process:3547): WARNING **:     A trash files/ directory should only have files linked or unlinked (via moves or deletes).  Some other operation has been detected on a file in the directory (eg: a file has been modified).  Likely, the data reported by the trash backend will now be inconsistent.

** (process:3547): WARNING **:   dir: /home/ross/.local/share/Trash/files, file: testfile2, type: 1
Comment 1 Ross Lagerwall 2014-09-27 11:10:14 UTC
Created attachment 287236 [details] [review]
trash: Ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT

Ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT when to prevent generating
a spurious warning about unsupported operations on the trash dir.
Comment 2 Ondrej Holy 2014-09-29 11:18:59 UTC
Review of attachment 287236 [details] [review]:

Looks good!
Comment 3 Ross Lagerwall 2014-10-01 06:40:59 UTC
Pushed to master as 1f2d2952135a1304b0ed66da1d3d8f60f1e1c06e. Thanks for the review!