trash: Ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT

Ignore G_FILE_MONITOR_EVENT_CHANGES_DONE_HINT when to prevent generating
a spurious warning about unsupported operations on the trash dir.

https://bugzilla.gnome.org/show_bug.cgi?id=737473